k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata: 
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        # image: wisecow:latest # image path
        image: 602917784174.dkr.ecr.us-east-2.amazonaws.com/wisecow
        ports:
        - containerPort: 4499
