k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow
  labels:
    app: wisecow
spec:
  selector:
    matchLabels:
        app: wisecow
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
        - name: wisecow
          image: 361482797762.dkr.ecr.ap-south-1.amazonaws.com/wisecow:latest
          ports:
            - containerPort: 4499
              protocol: TCP
          imagePullPolicy: Always
